Fix layout on mobile devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,9 +16,53 @@ h1#title {
     font-weight: normal;
 }
 
-.graph-container > iframe {
+.graph-container {
+    display: flex;
     margin-top: 12px;
 }
 .graph-container > iframe + iframe {
-    margin: 0 12px;
+    margin: 0 0 0 12px;
+}
+
+.graph-container .daily-contribution {
+    flex-basis: 70%;
+    height: 180px;
+}
+.graph-container .monthly-gauge {
+    flex-basis: 30%;
+    height: 180px;
+}
+.graph-container .daily-total {
+    flex-basis: 70%;
+    height: 540px;
+}
+.graph-container .daily-metrics {
+    flex-basis: 30%;
+    height: 540px;
+}
+
+@media (max-width: 1000px) {
+    .graph-container {
+        display: block;
+    }
+    .graph-container > iframe + iframe {
+        margin: 12px 0 0;
+    }
+
+    .graph-container .daily-contribution {
+        width: 100%;
+        height: 180px;
+    }
+    .graph-container .monthly-gauge {
+        width: 100%;
+        height: 180px;
+    }
+    .graph-container .daily-total {
+        width: 100%;
+        height: 180px;
+    }
+    .graph-container .daily-metrics {
+        width: 100%;
+        height: 540px;
+    }
 }
